# flowabs

./: CMakeLists.txt  ProjectHome.md  README.txt  build.bat  build.sh  default.ini  flowabs.icns  flowabs.pro  flowabs.rc  glsl_program.cpp  glsl_program.h  glview.cpp  glview.h  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  stable.h  texture_2d.cpp  texture_2d.h
glsl/: bf_fs.glsl  color_quantization_fs.glsl  dog_fs.glsl  fdog0_fs.glsl  fdog1_fs.glsl  gauss3x3_fs.glsl  gauss5x5_fs.glsl  gauss_fs.glsl  lab2rgb_fs.glsl  lic_fs.glsl  mix_fs.glsl  overlay_fs.glsl  rgb2lab_fs.glsl  rgb2ycbcr_fs.glsl  sst_fs.glsl  tfm_fs.glsl  ycbcr2rgb_fs.glsl
